added mongo and some core functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BRIGHT_DATA-USERNAME= brd-customer-hl_97301346-zone-unblocker
 BRIGHT_DATA-PASSWORD = mz46whtljpa1
+MONGODB_URI = mongodb+srv://nimatmg112:Iamgamer009@cluster0.az4rdvg.mongodb.net/mernapp?retryWrites=true&w=majority
